# proposed-package-testing

./: .gitignore  Cargo.toml  README.md
.github/ISSUE_TEMPLATE/: build-request.yml
.github/workflows/: ci.yaml  customize-image-on-issue.yaml  customize-image.yaml
scripts/: upload-image-to-azure.sh
src/: main.rs
tests/: download-tests.sh  lxd-test.sh  qcow2-test.sh  run-all-tests.sh
